# lakeapi2sql

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml  python-test.yml
lakeapi2sql/: __init__.py  bulk_insert.py  sql_connection.py  utils.py
src/: arrow_batch_sql_writer.rs  arrow_convert.rs  arrow_writer.rs  bulk_insert.rs  connect.rs  error.rs  lib.rs
test/: test_insert.py  test_insert_reader.py
test_server/: __init__.py
tests/: conftest.py  test_insert_simple.py
tests/data/faker/: part-00001-4cfc750a-f3ef-4e2b-b614-896fb16d93d2-c000.zstd.parquet
tests/data/user2/: part-00001-7e6179cf-46e2-4a0e-899f-969998adbc62-c000.zstd.parquet  part-00001-ab3f2a71-0260-4560-96f6-85e7dccbeb5a-c000.zstd.parquet
tests/sqls/: init.sql
