[package]
name = "lake2sql"
version = "0.7.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "lake2sql"
crate-type = ["lib", "cdylib"]

[dependencies]
arrow = { version = "48.0.0", features = ["ipc_compression", "pyarrow"] }
futures = "0.3.28"
log = "0.4.19"
pyo3-asyncio = { git = "https://github.com/awestlake87/pyo3-asyncio.git", "branch" = "v0.20", features = [
    "attributes",
    "tokio-runtime",
] }
# TODO: switch back to v0.20 once available
pyo3-log = "0.9.0"
reqwest = { version = "0.11.18", features = ["stream"] }
rust_decimal = "1.32.0"
tiberius = { git = "https://github.com/aersam/tiberius.git", branch = "bulk", features = [
    "time",
    "sql-browser-tokio",
    "rust_decimal",
] } #  
time = "0.3.22"
tokio = { version = "1.28.2", features = ["net", "macros"] }
tokio-util = { version = "0.7.8", features = ["compat", "io-util", "io"] }

[target.'cfg(unix)'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[dependencies.pyo3]
version = "0.20.0"
# "abi3-py37" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.10
features = ["abi3-py310"]
