[package]
name = "lake2sql"
version = "0.7.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "lake2sql"
crate-type = ["lib", "cdylib"]

[dependencies]
arrow = { version = "48.0.0", features = ["ipc_compression", "pyarrow"] }
futures = "0.3.28"
log = "0.4.19"
pyo3-asyncio = { version = "0.20", features = ["attributes", "tokio-runtime"] }
pyo3-log = "0.9.0"
rust_decimal = "1.32.0"

time = "0.3.22"
tokio = { version = "1.28.2", features = ["net", "macros"] }
tokio-util = { version = "0.7.8", features = ["compat", "io-util", "io"] }

[target.'cfg(target_os="linux")'.dependencies]
reqwest = { version = "0.11.18", features = [
    "stream",
    "rustls-tls-native-roots",
], default-features = false }
tiberius = { git = "https://github.com/aersam/tiberius.git", branch = "bulk", features = [
    "time",
    "sql-browser-tokio",
    "rust_decimal",
    "tds73",
    "rustls",
], default-features = false }

[target.'cfg(not(target_os="linux"))'.dependencies]
reqwest = { version = "0.11.18", features = ["stream"] }
tiberius = { git = "https://github.com/aersam/tiberius.git", branch = "bulk", features = [
    "time",
    "sql-browser-tokio",
    "rust_decimal",
] }

[dependencies.pyo3]
version = "0.20.0"
# "abi3-py37" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.10
features = ["abi3-py310"]
